--- a/company-contact.html
+++ b/company-contact.html
@@ -54,7 +54,7 @@
           <p>내용을 구체적으로 적어주실수록, 더 정확한 답변이 가능합니다.</p>
         </div>
 
-        <form class="form cForm" action="#" method="post">
+        <form id="contactForm" class="form cForm" action="#" method="post">
           <div class="formRow">
             <label>
               성함
