--- a/esg-quality.html
+++ b/esg-quality.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ESG | QUALITY & SAFETY | 정담</title>
   <meta name="description" content="정담 품질/안전. 기준을 문서화하고 현장에서 반복 가능하게 운영합니다." />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
