--- a/recruit-apply.html
+++ b/recruit-apply.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CAREER | APPLY | 정담</title>
   <meta name="description" content="정담 지원 안내. 현재는 지원 접수를 진행하지 않습니다." />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
