--- a/support-partner.html
+++ b/support-partner.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CONTACT | PARTNERSHIP | 정담</title>
   <meta name="description" content="정담 입점/제휴 접수 안내. 제안서 기준과 협업 프로세스를 제공합니다." />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
