--- a/esg-value.html
+++ b/esg-value.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ESG | VALUE SYSTEM | 정담</title>
   <meta name="description" content="정담 ESG 가치체계. 운영 기준으로 실행되는 ESG를 지향합니다." />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
