--- a/support-b2b.html
+++ b/support-b2b.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CONTACT | B2B DELIVERY | 정담</title>
   <meta name="description" content="정담 B2B 납품 상담 안내. 품목/규격/납기/물류 조건 중심으로 검토합니다." />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
