--- a/header.html
+++ b/header.html
@@ -1,8 +1,9 @@
 <header class="header">
   <div class="container header__inner">
     <a class="logo" href="./index.html" aria-label="정담 홈">
-      <span class="logo__mark">🌿</span>
-      <span class="logo__text">정담</span>
+      <img class="logo__mark" src="./assets/icon-192.png" alt="" />
+<span class="logo__text">정담</span>
+
     </a>
 
     <nav class="gnb" aria-label="주요 메뉴">
