--- a/business-making.html
+++ b/business-making.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BUSINESS | IN THE MAKING | 정담</title>
   <meta name="description" content="정담의 In the making. 기준을 만들고, 현장에서 검증하고, 반복 가능하게 표준화합니다." />
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/icon-192.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" href="/assets/favicon.ico?v=3" />
+  <link rel="apple-touch-icon" href="/assets/icon-192.png" />
+  <link rel="manifest" href="/assets/site.webmanifest" />
   <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
