--- a/recruit-talent.html
+++ b/recruit-talent.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CAREER | TALENT | 정담</title>
   <meta name="description" content="정담 인재상과 일하는 방식." />
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/icon-192.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" href="/assets/favicon.ico?v=3" />
+  <link rel="apple-touch-icon" href="/assets/icon-192.png" />
+  <link rel="manifest" href="/assets/site.webmanifest" />
   <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
