--- a/support.html
+++ b/support.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CONTACT | 정담</title>
   <meta name="description" content="정담 통합 문의/상담 페이지. 입점/제휴, 납품(B2B), 케이터링/행사, 기타 협업 문의를 한 곳에서 접수합니다." />
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/icon-192.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" href="/assets/favicon.ico?v=3" />
+  <link rel="apple-touch-icon" href="/assets/icon-192.png" />
+  <link rel="manifest" href="/assets/site.webmanifest" />
   <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
