--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>정담 | 정담</title>
+  <title> Home | 정담</title>
   <meta name="description" content="정담 메인. 유통과 브랜드 운영을 연결해 신선하고 투명한 F&B 경험을 제공합니다." />
   <link rel="icon" href="/assets/favicon.ico?v=3" />
-<link rel="apple-touch-icon" href="/assets/icon-192.png" />
-<link rel="manifest" href="/assets/site.webmanifest" />
-<meta name="theme-color" content="#1F5E3B" />
-
-
+  <link rel="apple-touch-icon" href="/assets/icon-192.png" />
+  <link rel="manifest" href="/assets/site.webmanifest" />
+  <meta name="theme-color" content="#1F5E3B" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
