--- a/company-history.html
+++ b/company-history.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>COMPANY | HISTORY | 정담</title>
-  <meta name="description" content="정담 히스토리." />
+  <meta name="description" content="정담의 시작과 범푸드에서 이어진 경험. 현장에서 작동하는 구조를 만들기 위한 축적의 기록." />
   <link rel="icon" href="/assets/favicon.ico?v=3" />
   <link rel="apple-touch-icon" href="/assets/icon-192.png" />
   <link rel="manifest" href="/assets/site.webmanifest" />
@@ -25,191 +25,229 @@
     <div class="container historyHero__inner">
       <div class="historyHero__copy">
         <p class="historyHero__kicker">HISTORY</p>
-        <h1 class="historyHero__title">기준을 만들고,<br/>반복 가능한 실행으로 확장합니다.</h1>
+
+        <h1 class="historyHero__title">
+          정담의 시작은 ‘브랜드’가 아니라<br/>
+          ‘현장 구조’였습니다.
+        </h1>
+
         <p class="historyHero__lead">
-          정담은 식품 가공·유통·외식 운영·케이터링을 하나의 시스템으로 연결합니다.
-          우리가 쌓아온 연혁은 ‘연도’가 아니라, 현장에서 작동하는 기준과 과정이
-          정교해진 기록입니다.
+          정담은 하나의 메뉴를 팔기 위해 출발하지 않았습니다. 처음의 이름은 범푸드였습니다.<br/>
+          우리가 던진 질문은 단순했습니다. <b>“무엇을 팔까”가 아니라 “어떻게 반복 가능하게 만들까”</b>였습니다.<br/>
+          현장에서 바로 실행되고, 비용 부담 없이 적용되며, 운영이 흔들리지 않는 구조를 만들기 위한 설계가
+          정담의 히스토리를 만들었습니다.
         </p>
 
         <div class="historyHero__meta" role="list" aria-label="핵심 키워드">
-          <span class="hChip" role="listitem">기준</span>
-          <span class="hChip" role="listitem">과정</span>
-          <span class="hChip" role="listitem">표준화</span>
-          <span class="hChip" role="listitem">현장 실행력</span>
-          <span class="hChip" role="listitem">파트너십</span>
+          <span class="hChip" role="listitem">현장 실행</span>
+          <span class="hChip" role="listitem">공급 안정성</span>
+          <span class="hChip" role="listitem">운영 설계</span>
+          <span class="hChip" role="listitem">단순 구조</span>
+          <span class="hChip" role="listitem">확장 가능성</span>
         </div>
 
         <div class="historyHero__line" aria-hidden="true"></div>
 
         <div class="historyHero__note">
           <strong>관점</strong>
-          <span>정담의 연혁은 “사업 확장”이 아니라 “시스템 정교화”를 중심으로 설명합니다.</span>
+          <span>정담의 연혁은 ‘연도’보다 <b>현장에서 검증된 방식이 축적된 과정</b>으로 설명합니다.</span>
         </div>
       </div>
 
       <div class="historyHero__mosaic" aria-label="현장 이미지 모자이크">
-        <div class="hm hm1" role="img" aria-label="생산 및 가공 현장"></div>
-        <div class="hm hm2" role="img" aria-label="물류 및 유통 운영"></div>
-        <div class="hm hm3" role="img" aria-label="외식 운영 현장"></div>
-        <div class="hm hm4" role="img" aria-label="케이터링 현장"></div>
+        <div class="hm hm1" role="img" aria-label="현장 실행"></div>
+        <div class="hm hm2" role="img" aria-label="공급과 원물"></div>
+        <div class="hm hm3" role="img" aria-label="운영 구조"></div>
+        <div class="hm hm4" role="img" aria-label="제품/메뉴 개발"></div>
       </div>
     </div>
   </section>
 
   <!-- PRINCIPLES -->
-  <section class="section hPrinciples">
+  <section class="section hPrinciples" aria-label="정담의 기반">
     <div class="container">
       <div class="sectionHead">
-        <h2>연혁을 ‘사업’이 아닌 ‘시스템’으로 읽는 기준</h2>
-        <p>우리가 다음 단계로 넘어갈 수 있었던 이유는, 기준을 만들고 지키는 방식에 있습니다.</p>
+        <h2>범푸드에서 정담으로 — 축적된 기준</h2>
+        <p>
+          외식은 ‘새로움’보다 ‘지속’이 어렵습니다. 정담은 현장이 오래 버틸 수 있는 조건을 먼저 설계했습니다.
+        </p>
       </div>
 
       <dl class="hDL">
         <div class="hDL__row">
-          <dt>표준은 문서가 아니라 운영입니다</dt>
-          <dd>규정은 예쁘게 쓰는 것이 아니라, 현장에서 반복 가능한 언어로 바뀌어야 합니다.</dd>
+          <dt>메뉴는 결과, 구조는 원인</dt>
+          <dd>
+            메뉴는 눈에 보이지만, 매출을 좌우하는 것은 동선·인력·물류·공급 같은 운영 조건입니다.
+            정담은 메뉴보다 운영 구조를 먼저 정리합니다.
+          </dd>
         </div>
         <div class="hDL__row">
-          <dt>품질은 결과가 아니라 과정입니다</dt>
-          <dd>검수로 끝나는 품질이 아니라, 처음부터 흔들리지 않는 공정을 설계합니다.</dd>
+          <dt>공급이 흔들리면 운영이 무너집니다</dt>
+          <dd>
+            좋은 메뉴도 안정적인 공급 구조가 없다면 현장에서 오래 살아남을 수 없습니다.
+            원물·규격·납기·보관 조건을 ‘가능/불가능’이 아닌 ‘운영 언어’로 정의해 왔습니다.
+          </dd>
         </div>
         <div class="hDL__row">
-          <dt>확장은 ‘속도’보다 ‘재현성’입니다</dt>
-          <dd>새로운 현장에서도 같은 품질을 내기 위해, 교육·점검·피드백 루프를 구축합니다.</dd>
+          <dt>복잡함보다 단순함이 강합니다</dt>
+          <dd>
+            현장은 빠르고 명확한 구조를 선호합니다.
+            누구나 이해하고 반복할 수 있는 단순한 조리·운영 구조가 더 큰 확장성을 만듭니다.
+          </dd>
         </div>
         <div class="hDL__row">
-          <dt>파트너십은 납품이 아니라 공동 운영입니다</dt>
-          <dd>서로의 기준을 맞추고 운영 데이터를 공유하며, 같은 목표로 움직이는 구조를 만듭니다.</dd>
+          <dt>확장은 간판이 아니라 재현성입니다</dt>
+          <dd>
+            같은 결과가 다른 현장에서도 재현되어야 확장입니다.
+            정담은 ‘한 번 되는 방식’이 아니라 ‘계속 되는 방식’을 축적해 왔습니다.
+          </dd>
         </div>
       </dl>
     </div>
   </section>
 
-  <!-- MILESTONES -->
-  <section class="section section--tint hMilestones" aria-label="시스템 구축 단계">
+  <!-- MILESTONES (프로젝트 기반으로 직관화) -->
+  <section class="section section--tint hMilestones" aria-label="전환점과 축적">
     <div class="container">
       <div class="hMilestones__head">
         <div>
-          <h2 class="hMilestones__title">System Milestones</h2>
-          <p class="hMilestones__lead">연도는 표시일 뿐, 핵심은 “어떤 기준이 구축되었는가”입니다.</p>
+          <h2 class="hMilestones__title">Milestones</h2>
+          <p class="hMilestones__lead">
+            프로젝트는 달랐지만, 결론은 하나였습니다. <b>현장에서 작동하는 ‘구조’가 브랜드를 만든다.</b>
+          </p>
         </div>
         <p class="hMilestones__hint" aria-hidden="true">SCROLL</p>
       </div>
 
       <div class="hTimeline">
-        <aside class="hRail" aria-label="연도 레일">
+        <aside class="hRail" aria-label="키워드 레일">
           <div class="hRail__inner">
-            <p class="hRail__k">YEARS</p>
+            <p class="hRail__k">FOCUS</p>
             <ul class="hRail__list">
-              <li><span class="hYear">2018</span></li>
-              <li><span class="hYear">2020</span></li>
-              <li><span class="hYear">2022</span></li>
-              <li><span class="hYear">2024</span></li>
+              <li><span class="hYear">B1</span></li>
+              <li><span class="hYear">B2</span></li>
+              <li><span class="hYear">B3</span></li>
+              <li><span class="hYear">B4</span></li>
             </ul>
             <div class="hRail__bar" aria-hidden="true"></div>
-            <p class="hRail__s">기준 → 과정 → 반복 → 확장</p>
+            <p class="hRail__s">공급 → 확장 → 설계 → 단순화</p>
           </div>
         </aside>
 
         <div class="hStream">
+
+          <!-- 1 -->
           <article class="hEntry">
             <header class="hEntry__head">
-              <p class="hEntry__kicker">FOUNDATION</p>
-              <h3 class="hEntry__title"><span class="hEntry__year">2018</span> 기준을 “운영 언어”로 정의</h3>
+              <p class="hEntry__kicker">SUPPLY FIRST</p>
+              <h3 class="hEntry__title"><span class="hEntry__year">B1</span> 어물전 프로젝트 — 흐름을 설계하다</h3>
             </header>
             <div class="hEntry__body">
               <p class="hEntry__p">
-                핵심 품목의 품질 기준을 ‘검수 항목’이 아니라 ‘공정의 언어’로 재정의했습니다.
-                생산·가공·출고의 기준을 하나로 맞추기 위한 첫 단계를 만들었습니다.
+                어물전 프로젝트는 한 가지 사실을 명확하게 만들었습니다.
+                <b>식재료의 흐름이 곧 사업의 흐름</b>이라는 것.
+                메뉴 경쟁력보다 먼저 공급 안정성, 규격, 납기, 보관 조건을 운영 기준으로 정리하는 과정이었습니다.
               </p>
               <ul class="hEntry__list">
-                <li>원·부자재 규격 정의 및 승인 체계 정리</li>
-                <li>현장 체크리스트(교육/점검) 1차 구축</li>
-                <li>품질 이슈 기록 방식 통일(원인-조치-재발 방지)</li>
+                <li>공급/물류 조건을 ‘운영 전제’로 정의</li>
+                <li>현장에서 필요한 규격·취급 기준을 명문화</li>
+                <li>지속 운영을 위한 반복 가능성 점검</li>
               </ul>
             </div>
             <figure class="hEntry__media">
-              <div class="hPhoto hp1" role="img" aria-label="기준 수립과 현장 점검"></div>
-              <figcaption class="hCap">현장 기준은 ‘문서’가 아니라 ‘반복 가능한 루틴’으로 완성됩니다.</figcaption>
+              <div class="hPhoto hp1" role="img" aria-label="원물과 공급 흐름"></div>
+              <figcaption class="hCap">좋은 메뉴보다 먼저, 운영이 버틸 수 있는 흐름을 만듭니다.</figcaption>
             </figure>
           </article>
 
+          <!-- 2 -->
           <article class="hEntry">
             <header class="hEntry__head">
-              <p class="hEntry__kicker">STANDARDIZATION</p>
-              <h3 class="hEntry__title"><span class="hEntry__year">2020</span> 공정을 표준화하고 교육을 내재화</h3>
+              <p class="hEntry__kicker">NOT LIMITED</p>
+              <h3 class="hEntry__title"><span class="hEntry__year">B2</span> SKYRiders — 브랜드의 확장 조건</h3>
             </header>
             <div class="hEntry__body">
               <p class="hEntry__p">
-                표준화는 “정답을 하나로 만든다”가 아니라, “현장에서 흔들리지 않게 만든다”입니다.
-                교육·점검·피드백의 구조를 운영에 내재화했습니다.
+                SKYRiders 프로젝트는 ‘브랜드=공간’이라는 고정관념을 흔들었습니다.
+                사람과 경험, 운영 구조가 결합되면 브랜드는 다른 산업과도 연결될 수 있습니다.
+                정담은 이 과정에서 확장의 핵심을 <b>“공간이 아닌 구조의 재현성”</b>으로 재정의했습니다.
               </p>
               <ul class="hEntry__list">
-                <li>공정별 SOP(표준작업절차) 정리 및 버전관리</li>
-                <li>신규 인력 온보딩 교육 플로우 구축</li>
-                <li>클레임 대응 프로토콜(리드타임/보고체계) 정립</li>
+                <li>브랜드 확장의 핵심을 ‘구조의 전이’로 설정</li>
+                <li>운영 요소(인력/프로세스/품질)의 분리·재조합</li>
+                <li>협업 모델에서의 표준 운영 조건 정리</li>
               </ul>
             </div>
             <figure class="hEntry__media">
-              <div class="hPhoto hp2" role="img" aria-label="표준 공정과 교육"></div>
-              <figcaption class="hCap">표준은 교육에서 완성되고, 교육은 점검에서 강화됩니다.</figcaption>
+              <div class="hPhoto hp2" role="img" aria-label="확장 가능한 운영 구조"></div>
+              <figcaption class="hCap">브랜드는 공간에 묶이지 않습니다. 구조가 있으면 어디든 작동합니다.</figcaption>
             </figure>
           </article>
 
+          <!-- 3 -->
           <article class="hEntry">
             <header class="hEntry__head">
-              <p class="hEntry__kicker">REPEATABILITY</p>
-              <h3 class="hEntry__title"><span class="hEntry__year">2022</span> 유통·외식·케이터링 연결 구조 강화</h3>
+              <p class="hEntry__kicker">DESIGN</p>
+              <h3 class="hEntry__title"><span class="hEntry__year">B3</span> 케이터링 설계 — 시스템이 품질을 만든다</h3>
             </header>
             <div class="hEntry__body">
               <p class="hEntry__p">
-                가공과 유통, 외식 운영과 케이터링이 따로 움직이면 품질은 ‘운’이 됩니다.
-                정담은 연결 지점에서 변수를 관리하기 위한 운영 표준을 강화했습니다.
+                케이터링은 메뉴보다 시스템이 먼저라는 점을 가장 극적으로 보여줍니다.
+                동선, 인력 구조, 물류 흐름이 설계되지 않으면 좋은 아이디어도 유지되지 않습니다.
+                정담은 이 과정에서 <b>‘실행 설계’</b>를 하나의 역량으로 고도화했습니다.
               </p>
               <ul class="hEntry__list">
-                <li>납품/현장 수요 예측 기반 운영 루틴 구축</li>
-                <li>현장 피드백 → 생산 반영의 루프 정착</li>
-                <li>메뉴/레시피 운영 표준(원가·품질·재고) 정비</li>
+                <li>조리 동선/작업 분담/현장 세팅 표준화</li>
+                <li>물류·보관·서빙 흐름을 운영 기준으로 통합</li>
+                <li>현장에서 흔들리지 않는 실행 체크 포인트 구축</li>
               </ul>
             </div>
             <figure class="hEntry__media">
-              <div class="hPhoto hp3" role="img" aria-label="연결 운영과 현장 실행"></div>
-              <figcaption class="hCap">연결이 강해질수록 품질은 더 ‘예측 가능’해집니다.</figcaption>
+              <div class="hPhoto hp3" role="img" aria-label="현장 운영 설계"></div>
+              <figcaption class="hCap">아이디어가 아니라 설계가 결과를 만듭니다.</figcaption>
             </figure>
           </article>
 
+          <!-- 4 -->
           <article class="hEntry">
             <header class="hEntry__head">
-              <p class="hEntry__kicker">PARTNERSHIP</p>
-              <h3 class="hEntry__title"><span class="hEntry__year">2024</span> 파트너와 함께 운영하는 표준</h3>
+              <p class="hEntry__kicker">SIMPLICITY</p>
+              <h3 class="hEntry__title"><span class="hEntry__year">B4</span> 쌀국수 유통 — 단순한 구조의 힘</h3>
             </header>
             <div class="hEntry__body">
               <p class="hEntry__p">
-                정담은 파트너를 “납품 대상”으로 보지 않습니다.
-                동일한 기준을 공유하고 운영 데이터를 기반으로 개선하는 ‘공동 실행’ 구조를 지향합니다.
+                유통을 경험하면서 확신은 더 강해졌습니다.
+                복잡한 레시피보다 <b>누구나 빠르게 실행할 수 있는 단순한 구조</b>가 현장에서 더 강합니다.
+                범푸드에서 축적된 경험은 결국 하나의 결론으로 모였고,
+                그 결과가 ‘정담’이라는 이름 아래 정리되었습니다.
               </p>
               <ul class="hEntry__list">
-                <li>파트너 온보딩(교육/점검/운영 합의) 프로세스 고도화</li>
-                <li>품질 지표 공유 및 개선 사이클 정례화</li>
-                <li>현장 운영 지원 체계 강화(이슈 대응/재발 방지)</li>
+                <li>현장 실행을 우선하는 ‘단순 설계’ 기준 확립</li>
+                <li>교육/재현/운영 안정성을 중심으로 구조 정리</li>
+                <li>첫 번째 결과물: 조선한그릇(메뉴판에서 시작)</li>
               </ul>
             </div>
             <figure class="hEntry__media">
-              <div class="hPhoto hp4" role="img" aria-label="파트너십 기반 운영"></div>
-              <figcaption class="hCap">파트너십은 계약이 아니라, 같은 기준으로 움직이는 운영입니다.</figcaption>
+              <div class="hPhoto hp4" role="img" aria-label="유통과 실행 구조"></div>
+              <figcaption class="hCap">정담은 ‘큰 매장’이 아니라 ‘작은 한 그릇’에서 시작합니다.</figcaption>
             </figure>
           </article>
+
         </div>
       </div>
     </div>
   </section>
 
+  <!-- CTA -->
   <section class="section hCta" aria-label="문의 유도">
     <div class="container hCta__inner">
       <div class="hCta__copy">
-        <h2>현장에서 작동하는 기준을 함께 만들고 싶다면</h2>
-        <p>정담은 식품 가공·유통·외식 운영·케이터링을 하나의 시스템으로 연결합니다. 파트너십 및 협업 문의를 환영합니다.</p>
+        <h2>정담의 다음 단계는 ‘함께 실행하는 구조’입니다</h2>
+        <p>
+          정담은 작은 협업에서 시작해 직영 구조로 확장하고,
+          필요한 순간 더 큰 브랜드로 성장할 준비를 합니다.
+          운영 기준과 실행 구조를 함께 만들 파트너를 기다립니다.
+        </p>
       </div>
       <div class="hCta__actions">
         <a class="btn" href="./support.html">CONTACT</a>
