--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@
     <section class="photoStrip" aria-label="메인 배너">
       <div class="container stripGrid">
         <div class="strip s1"></div>
-<div class="strip s2"></div>
-<div class="strip s3"></div>
-
+        <div class="strip s2"></div>
+        <div class="strip s3"></div>
       </div>
     </section>
 
@@ -160,21 +159,31 @@
       </div>
 
       <div class="container galleryGrid">
-  <div class="g g1"></div>
-  <div class="g g2"></div>
-  <div class="g g3"></div>
-  <div class="g g4"></div>
-  <div class="g g5"></div>
-  <div class="g g6"></div>
-  <div class="g g7"></div>
-  <div class="g g8"></div>
-  <div class="g g9"></div>
-  <div class="g g10"></div>
-  <div class="g g11"></div>
-  <div class="g g12"></div>
-</div>
-
+        <div class="g g1"></div>
+        <div class="g g2"></div>
+        <div class="g g3"></div>
+        <div class="g g4"></div>
+        <div class="g g5"></div>
+        <div class="g g6"></div>
+        <div class="g g7"></div>
+        <div class="g g8"></div>
+        <div class="g g9"></div>
+        <div class="g g10"></div>
+        <div class="g g11"></div>
+        <div class="g g12"></div>
+      </div>
     </section>
+
+    <!-- ✅ COLLABORATION -->
+<section class="affiliates" aria-label="협업 브랜드">
+  <div class="container affiliatesHead" id="affHead"></div>
+
+  <!-- 로고만 보여줄 트랙 -->
+  <div class="container affLogoWrap">
+    <div class="affLogos" id="affGrid" aria-label="협업 브랜드 로고 목록"></div>
+  </div>
+</section>
+
   </main>
 
   <!-- ✅ 공통 푸터 로드 -->
